<resources>
    <string name="app_name">wzryZhangYB</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_home_recommend">推荐</string>
    <string name="title_home_find">发现</string>
    <string name="title_home_square">广场</string>
    <string name="title_home_message">消息</string>
    <string name="title_home_personal">我</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_toolbar_title">王者荣耀掌游宝</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="news_content_title">掌游宝资讯</string>
    <string name="operation_collect">准备播放</string>
    <string name="operation_share">准备下载</string>
    <string name="operation_refresh">刷新</string>
    <string name="check_friends">点击登录后，才可查看好友喔！</string>

</resources>
