<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/home_recommend_d"
        android:title="@string/title_home_recommend"/>

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/home_tab_game_d"
        android:title="@string/title_home_find"/>

    <item
        android:id="@+id/navigation_square"
        android:icon="@drawable/home_square_d"
        android:title="@string/title_home_square"/>
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/home_tab_message_d"
        android:title="@string/title_home_message"/>
    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/home_tab_personal_d"
        android:title="@string/title_home_personal"/>

</menu>
