<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="180dp"
              android:layout_height="wrap_content"
              android:background="@color/color_black"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="@dimen/list_item_padding">

    <LinearLayout
        android:id="@+id/ll_operation_collect"
        android:layout_width="match_parent"
        android:background="@color/color_black"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/topic_detail_operate_unfav"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/operation_collect"
            android:textColor="@color/color_white"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_operation_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/topic_detail_operate_share"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/operation_share"
            android:textColor="@color/color_white"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_operation_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/topic_detail_operate_refresh"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/operation_refresh"
            android:textColor="@color/color_white"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>